--- a/TTT.html
+++ b/TTT.html
@@ -9,19 +9,19 @@
             <div>
                 <div id="board">
                     <div>
-                        <button class="sqr" id="1"></button>
-                        <button class="sqr" id="2"></button>
-                        <button class="sqr" id="3"></button>
+                        <div class="sqr"></div>
+                        <div class="sqr"></div>
+                        <div class="sqr"></div>
                     </div>
                     <div>
-                        <button class="sqr" id="4"></button>
-                        <button class="sqr" id="5"></button>
-                        <button class="sqr" id="6"></button>
+                        <div class="sqr"></div>
+                        <div class="sqr"></div>
+                        <div class="sqr"></div>
                     </div>
                     <div>
-                        <button class="sqr" id="7"></button>
-                        <button class="sqr" id="8"></button>
-                        <button class="sqr" id="9"></button>
+                        <div class="sqr"></div>
+                        <div class="sqr"></div>
+                        <div class="sqr"></div>
                     </div>
                 </div>
             </div>
