--- a/TTT.html
+++ b/TTT.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <body>
         <link rel="stylesheet" href="./TTT.css">
-    <script src="TTT.js"></script>
+    <script src="TTT.js" defer></script>
         <main>
             <div>
                 <div id="board">
@@ -27,7 +27,7 @@
             </div>
             <div class="winning-message" id="winningMessage">
                 <div id="WinningMessageText"></div>
-                <button id="restartButton">Restart</button>
+                <button id="resetButton">Reset</button>
             </div>
         </main>
     </body>
