Finished Tic Tac Toe Game

--- a/TTT.html
+++ b/TTT.html
@@ -25,8 +25,7 @@
                     </div>
                 </div>
             </div>
-            <div class="winning-message" id="winningMessage">
-                <div id="WinningMessageText"></div>
+            <div>
                 <button id="resetButton">Reset</button>
             </div>
         </main>
